# helix-db

./: .gitignore  cloud_commands_test_plan.md  run_cloud_tests.sh  test_results_report.md
helix-cli/: Cargo.toml
helix-cli/tests/: cloud_commands_test.rs  fly_ecr_tests.rs  integration_test.rs
helix-cli/tests/mocks/: aws.rs  docker.rs  fly.rs  helix_cloud.rs  mod.rs
helix-container/src/: queries.rs
helix-db/benches/: hnsw_benches.rs
helix-db/src/helix_engine/: types.rs
helix-db/src/helix_engine/batch/: batch_insert.rs  batch_transaction.rs
helix-db/src/helix_engine/bm25/: bm25.rs  bm25_tests.rs
helix-db/src/helix_engine/storage_core/: mod.rs  txn.rs
helix-db/src/helix_engine/tests/: hnsw_tests.rs
helix-db/src/helix_engine/tests/traversal_tests/: drop_tests.rs  edge_traversal_tests.rs  filter_tests.rs  node_traversal_tests.rs  remapping_tests.rs  secondary_index_tests.rs  shortest_path_tests.rs  update_tests.rs  util_tests.rs  vector_traversal_tests.rs
helix-db/src/helix_engine/traversal_core/: config.rs  traversal_iter.rs
helix-db/src/helix_engine/traversal_core/ops/source/: add_e_batch.rs  add_n_batch.rs
helix-db/src/helix_engine/traversal_core/ops/vectors/: insert.rs  search.rs
helix-db/src/helix_engine/vector_core/: hnsw.rs  txn.rs  utils.rs  vector.rs  vector_core.rs  vector_distance.rs
helix-db/src/helix_gateway/mcp/: tools_tests.rs
