[package]
name = "helix-cli"
version = "2.0.0"
edition = "2024"

[dependencies]
helix-metrics = { path = "../metrics" }
helix-db = { path = "../helix-db" }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
eyre = "0.6.12"
toml = "0.9.5"
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
color-eyre = "0.6.5"
async-trait = "0.1.89"
iota = "0.2.3"
self_update = "0.42.0"
uuid = { version = "1.18.1", features = ["v4", "v6", "fast-rng"] }
chrono = "0.4.42"
flume = "0.11.1"
dotenvy = "0.15.7"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
regex = "1.11.2"
[[bin]]
name = "helix"
path = "src/main.rs"

[features]
normal = ["helix-db/server"]
ingestion = ["helix-db/full"]
default = ["normal"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
mockito = "1.6"
base64 = "0.22"
hex = "0.4"
